# Auto-Subs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  setup.py  transcriber.py
src/managers/: StyleManager.py  SubtitlesManager.py  TranscriptionManager.py  VideoManager.py  base_manager.py  project_manager.py  style_manager.py  subtitles_manager.py  transcription_manager.py  video_manager.py
src/settings/: StyleManager.py
src/subtitles/: generator.py  models.py  segmenter.py
src/ui/: LeftPanel.py  MediaPlayer.py  SubtitleEditorApp.py  SubtitlesLayout.py  TopBar.py  VideoLayout.py  Widget.py  left_panel.py  media_player.py  subtitle_editor_app.py
src/ui/customizations/style/: FontStyleLayout.py
src/ui/style/: FontStyleLayout.py  HighlightStyleLayout.py  StyleLayout.py  StylePresetView.py  font_style_layout.py  highlight_style_layout.py  style_layout.py  style_preset_view.py
src/ui/style_layout/: StyleLayout.py
src/ui/subtitles/: SegmentWordEditor.py  segment_word_editor.py
src/ui/timeline/: Models.py  SegmentsBar.py  SubtitleSegmentBar.py  TimelineBar.py  VideoBar.py  VideoSegmentBar.py  constants.py  segments_bar.py  subtitle_segment_bar.py  timeline_bar.py  timeline_indicator.py  video_segment_bar.py
src/utils/: QDebouncer.py  QThrottler.py  color_operations.py  constants.py  exception_handler.py  ffmpeg_utils.py  file_operations.py  logger_config.py  qdebouncer.py  qthrottler.py
src/utils/operations/: color_operations.py  file_operations.py
tests/: test_color_utils.py  test_debounce_throttle.py  test_mpv.py  test_segmentation.py  test_stacked_widget.py  test_style_manager.py  test_subtitle_preview_generator.py  test_subtitles.py  test_subtitles_generator.py  test_timeline.py  test_transcriber.py  test_video_play.py  test_video_player.py  utils.py
tests/input/: segmentation1.json  transcription1.json
tests/managers/: test_style_manager.py  test_subtitles_manager.py
tests/output/: style_test.json  subtitles1.ass  subtitles1.srt  test_ass_file_generator.ass
tests/subtitles/: test_segmenter.py  test_subtitle_models.py
tests/ui/timeline/: test_subtitle_segment_bar.py
tests/utils/: test_color_utils.py  test_ffmpeg_utils.py
ui/: SubtitleEditorApp.py  SubtitlesLayout.py  TopBar.py  VideoLayout.py
ui/style_layout/: FontStyleLayout.py  HighlightStyleLayout.py  StyleLayout.py
